---
source: book/tests/snapshot.rs
expression: "from club_ratings\nfilter rating != null\n# TODO: this is real ugly. `average rating` should not require parenthesis\n# TODO: why cannot we put comments in group's pipeline?\ngroup year (\n    derive [rating_norm = rating - (average rating) / (stddev rating)]\n)\n"
---
SELECT
  *,
  rating - AVG(rating) OVER (PARTITION BY year) / STDDEV(rating) OVER (PARTITION BY year) AS rating_norm
FROM
  club_ratings
WHERE
  rating IS NOT NULL

